tests/compiler/nullKeyword/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.9.2/tests/cases/compiler/nullKeyword.ts`, Apache-2.0 License

null.foo;
//~^ ERROR: The value 'null' cannot be used here.
